Update D211- Data Acquisition Performance Assessment.ipynb

--- a/D211- Data Acquisition Performance Assessment.ipynb
+++ b/D211- Data Acquisition Performance Assessment.ipynb
@@ -5,11 +5,7 @@
    "id": "19380102",
    "metadata": {},
    "source": [
-    "<span style=\"color:Blue\"><b> Student :</b> MILAN DHORE </span><br>\n",
-    "<span style=\"color:Blue\"><b> Student ID:</b> 006104606 </span><br>\n",
-    "<span style=\"color:Blue\"><b> Program :</b> Master of Science, Data Analytics </span><br>\n",
-    "<span style=\"color:Blue\"><b> Program Mentor :</b> Jared Knepp </span><br>\n",
-    "<span style=\"color:Blue\"><b> Course :</b> D211- Data Acquisition Performance Assessment(With Churn Dataset) </span><br>"
+       "<span style=\"color:Blue\"><b> Course :</b> Data Acquisition (With Churn Dataset) </span><br>"
    ]
   },
   {
