Update D211- Data Acquisition Performance Assessment.ipynb

--- a/D211- Data Acquisition Performance Assessment.ipynb
+++ b/D211- Data Acquisition Performance Assessment.ipynb
@@ -5,7 +5,7 @@
    "id": "19380102",
    "metadata": {},
    "source": [
-       "<span style=\"color:Blue\"><b> Course :</b> Data Acquisition (With Churn Dataset) </span><br>"
+       "<span style=\"color:Blue\"><b> :</b> Data Acquisition (With Churn Dataset) </span><br>"
    ]
   },
   {
